<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MEM</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount:</string>
    <string name="default_amount">0.00</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_project">Choose Project</string>
    <string name="submit">Submit</string>
    <string name="photo">Photo</string>
    <string name="categories">Categories</string>
    <string name="project">Project</string>
    <string name="list">List</string>
    <string name="usd_currency_sign">$</string>

    <!-- date picker -->
    <string name="from">From:</string>
    <string name="to">To:</string>

    <string-array name="currency_array">
        <item>USD</item>
        <item>EUR</item>
        <item>PLN</item>
        <item>GPB</item>
    </string-array>

    <!-- Strings MENU -->
    <string name="dashboard">Dashboard</string>
    <string name="add">Add</string>
    <string name="OCR">OCR</string>
    <string name="QR">QR Code</string>

    <!-- Strings LOGIN -->
    <string name="pin">Enter PIN</string>
    <string name="login">LOGIN</string>

    <!-- Strings PROJECTS -->
    <string name="project1">Project 1</string>
    <string name="project2">Project 2</string>
    <string name="project3">Project 3</string>
    <string name="project4">Project 4</string>
    <string name="title_activity_add_screen">AddScreenActivity</string>
    <string name="title_activity_go_to_add_screen">GoToAddScreenActivity</string>
    <string name="title_activity_expense_entry_detail">ExpenseEntryDetailActivity</string>
    <string name="title_activity_ocr">OcrActivity</string>
    <string name="title_activity_qr">QRActivity</string>
    <string name="title_activity_intent_result">IntentResult</string>
    <string name="title_activity_intent_integrator">IntentIntegrator</string>
    <string name="title_activity_dashboard">Dashboard</string>

</resources>
