<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:padding="30dp">

        <Button
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_project"
            android:layout_gravity="center"
            android:id="@+id/projectButton"/>

        <Button
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:text="@string/choose_category"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:id="@+id/categoryButton"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/amount"/>

            <EditText
                android:id="@+id/inputAmountEditText"
                android:layout_width="100dp"
                android:inputType="number"
                android:layout_height="40dp"
                android:text="@string/default_amount"/>

            <Spinner
                android:id="@+id/currencySpinner"
                android:layout_width="100dp"
                android:layout_height="40dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="7dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/commentEditText"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:text="@string/photo"
                android:id="@+id/photoButton"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:text="@string/submit"
                android:id="@+id/submitButton"/>

        </LinearLayout>

</LinearLayout>