<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="20dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="50dp"
            android:text="@string/from"
            android:layout_height="match_parent"/>
        <!--
        <DatePicker
            android:layout_width="100dp"
            android:layout_height="70dp"/> -->

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/graphview_selectDateFromButton"
            style="?android:attr/spinnerStyle"/>

        <TextView
            android:layout_width="50dp"
            android:text="@string/to"
            android:layout_height="match_parent"/>
        <!--
        <DatePicker
            android:layout_width="100dp"
            android:layout_height="70dp"/> -->

        <Button
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:id="@+id/graphview_selectDateToButton"
            style="?android:attr/spinnerStyle"/>

        </LinearLayout>
<!--
    <ImageView
        android:layout_width="wrap_content"
        android:contentDescription="Chart"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ic_launcher"
        android:layout_gravity="center"/> -->

    <pl.byd.wsg.promand.project5.graphs.BarGraph
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/pieGraph"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/categories"
            android:id="@+id/buttonGoCat"
            android:onClick="goCategories" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/buttonGoProj"
            android:text="@string/project"
            android:onClick="goProjects" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/buttonGoReportList"
            android:onClick="goReportList"
            android:text="@string/list"/>
    </LinearLayout>


</LinearLayout>