<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.byd.wsg.promand.project5.Login.LoginActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:id="@+id/linearLayout">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <Button
                android:layout_width="160dip"
                android:layout_height="160dip"
                android:text="@string/dashboard"
                android:id="@+id/buttonDashBoard"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="goDashboard" />

            <Button
                android:layout_width="160dip"
                android:layout_height="160dip"
                android:text="@string/OCR"
                android:id="@+id/buttonOCR"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"/>
            </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical">

            <Button
                android:layout_width="160dip"
                android:layout_height="160dip"
                android:text="@string/add"
                android:id="@+id/buttonAdd"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:onClick="goAddScreen" />

            <Button
                android:layout_width="160dip"
                android:layout_height="160dip"
                android:text="@string/QR"
                android:id="@+id/buttonQR"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"/>
            </LinearLayout>
    </LinearLayout>

</RelativeLayout>
