<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:padding="30dp">

    <!-- Dummy LinearLayout for requesting focus out of editText  -->
        <LinearLayout
            android:focusable="true" android:focusableInTouchMode="true"
            android:layout_width="0px" android:layout_height="0px"/>

    <!--android:text="@string/choose_project" should be placed inside-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:text="Choose Project Test"
            android:layout_gravity="center"
            android:id="@+id/chooseProjectButton"
            android:onClick="goProjects"
            android:layout_weight="0.60" />

        <TextView
            android:id="@+id/projectTextView"
            android:editable = "true"
            android:layout_width="100dp"
            android:inputType="text"
            android:layout_height="40dp"
            android:text=""
            android:layout_weight="0.70" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:weightSum="1">
        <Button
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:text="Choose Cat. Test"
            android:layout_marginTop="7dp"
            android:id="@+id/chooseCategoryButton"
            android:onClick="openCategoryChooser"/>
        <TextView
            android:id="@+id/categoryTextView"
            android:editable = "true"
            android:layout_width="100dp"
            android:inputType="text"
            android:layout_height="40dp"
            android:text=""
            android:layout_weight="0.70" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="7dp"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/amount"/>

            <EditText
                android:id="@+id/inputAmountEditText"
                android:layout_width="100dp"
                android:editable="true"
                android:inputType="number"
                android:layout_height="40dp"
                android:text="@string/default_amount"/>
            </LinearLayout>

            <!-- <Spinner
                 android:id="@+id/currencySpinner"
                 android:layout_width="100dp"
                 android:layout_height="40dp"/>-->

         </LinearLayout>

    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginTop="7dp"
         android:orientation="horizontal">

                <Button
                android:layout_width="match_parent"
                android:editable="true"
                android:layout_height="match_parent"
                android:id="@+id/selectDateButton"
                style="?android:attr/spinnerStyle"/>

          </LinearLayout>

    <!--Comment EditText-->
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="100dp"
              android:orientation="horizontal">
              <EditText
                  android:layout_width="match_parent"
                  android:layout_height="90dp"
                  android:inputType="textMultiLine"
                  android:ems="10"
                  android:id="@+id/commentEditText"
                  android:layout_gravity="center_horizontal"
                  android:hint="Enter your comment here"/>
          </LinearLayout>

    <ImageView android:id="@+id/imageView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dip"
        android:layout_weight="1"
        android:src="@drawable/nophoto"
        android:onClick="submitExpense"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="100dp"
              android:orientation="horizontal"
              android:layout_marginTop="20dp">

              <Button
                  android:layout_width="fill_parent"
                  android:layout_height="80dp"
                  android:text="@string/submit"
                  android:id="@+id/submitButton"
                  android:onClick="submitExpense"/>
          </LinearLayout>
  </LinearLayout>
</ScrollView>